Temporary fix for badge position in dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,6 +38,31 @@ $dark-theme: mat.define-dark-theme(
 
 @media (prefers-color-scheme: dark) {
   @include mat.all-component-themes($dark-theme);
+
+  // Temporary fix for badge position in dark mode
+  .mat-badge-medium {
+    .mat-badge-content {
+      width: 22px;
+      height: 22px;
+      line-height: 22px;
+      position: absolute;
+      text-align: center;
+      display: inline-block;
+      transition: transform .2s ease-in-out;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      pointer-events: none;
+    }
+
+    &.mat-badge-overlap.mat-badge-before .mat-badge-content {
+      left: -11px;
+    }
+
+    &.mat-badge-above .mat-badge-content {
+      top: -11px;
+    }
+  }
 }
 
 html,
@@ -98,16 +123,30 @@ body {
   @media screen and (prefers-color-scheme: light) {
     background: radial-gradient(
       circle,
-      transparentize(map-get($map: $light-primary, $key: 500), $transparentizer / 2) 6.9%,
-      transparentize(map-get($map: $light-accent, $key: "A200"), $transparentizer),
+      transparentize(
+          map-get($map: $light-primary, $key: 500),
+          $transparentizer / 2
+        )
+        6.9%,
+      transparentize(
+        map-get($map: $light-accent, $key: "A200"),
+        $transparentizer
+      )
     );
   }
 
   @media screen and (prefers-color-scheme: dark) {
     background: radial-gradient(
       circle,
-      transparentize(map-get($map: $dark-primary, $key: 500), $transparentizer / 2) 6.9%,
-      transparentize(map-get($map: $dark-accent, $key: "A200"), $transparentizer),
+      transparentize(
+          map-get($map: $dark-primary, $key: 500),
+          $transparentizer / 2
+        )
+        6.9%,
+      transparentize(
+        map-get($map: $dark-accent, $key: "A200"),
+        $transparentizer
+      )
     );
   }
 }
